# Extended-Mircograd-Framework

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
GNNs/: CS224W_Colab_1_2022_23.ipynb  Copy_of_CS224W_Colab2.ipynb  Copy_of_CS224W_Colab3_2023.ipynb  Copy_of_CS224W_Colab4.ipynb  Copy_of_CS224W_Colab5.ipynb  Dataset_code.ipynb  Deepsnap_homogeneous.ipynb  Hetero_node_attn_mean.ipynb  Intuitive_GNN.ipynb  KG_completion.ipynb  K_C_sampling_backend.ipynb  LabelProp_CS.ipynb  NetworkX.ipynb  Trad_ML.ipynb
LLMs/: dataset.py  gpt.ipynb  gpt_huggingface.ipynb  gpu_optimized_gpt.ipynb  torch_optimized_gpt.ipynb
Micrograd_example/: mlp.py  trial.py
micrograd/: Module.py  __init__.py  generator.py
pytorch_base_examples/: CNN_torch.ipynb  LSTM_torch.ipynb  MLP_torch.ipynb  mlp.py
pytorch_modular_examples/: CNN_Module.ipynb  LSTM_Module.ipynb  MLP_Module.ipynb  mlp.py
test/: test_micrograd.py
